--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-body {
-  background-image: url(Images/Background.jpeg);
-}
 
+body {
+  /*background-image: url(Images/Background.jpeg);*/
+  font-family: Volkhov;
+}
+/*------------------Header-----------------text-decoration-none fw-bold fs-4*/
 header {
+  background-color:rgb(30, 29, 29);
   align-items: center;
 }
 
@@ -12,17 +15,41 @@ header img {
 
 header nav ul {
   list-style: none;
-  background-color: aliceblue;
 }
 
 header nav li {
   display: inline-block;
 }
 header nav li a {
-  color: rgb(0, 0, 0);
+  font-family: Volkhov;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+  color: rgb(190, 190, 190);
   transition: color 0.21s;
 }
 
 header nav li a:hover {
   color: rgb(214, 159, 64);
+}
+/*-------------Hero------------------*/
+.Hero-container{
+  width: 100%;
+  height: 400px;
+  background-image: url(Images/Background.jpeg);
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.container-element2,.container-element1{
+  font-family: Volkhov;
+  color: aliceblue;
+  align-items: center;
+}
+/*----------Moto----------------------*/
+.moto-container{
+  background: linear-gradient(135deg, rgba(255,255,255,0.1),rgba(255,255,255,0));
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+
 }
