--- a/style.css
+++ b/style.css
@@ -50,13 +50,12 @@ header nav li a:hover {
   text-decoration: none;
   border: 1px solid rgb(206, 204, 203);
   color: rgb(206, 204, 203);
-  transition: color,border,background-image,background-color 1s;
+  transition: color,border,background-color 1s;
 
 }
 .hero-click:hover{
-  color: aliceblue;
-  background-image: url(Images/fiery.png);
-  background-color: rgb(211, 46, 24);
+  color: rgb(104, 104, 104);
+  background-color: rgb(209, 209, 209);
   border: none;
 }
 
@@ -70,8 +69,8 @@ header nav li a:hover {
 }
 .moto-image1{
   width: 500px;
-
 }
+
 /*---------Features--------------*/
 .icon-box{
   background: linear-gradient(135deg, rgba(255,255,255,0.1),rgba(255,255,255,0));
@@ -92,4 +91,36 @@ header nav li a:hover {
 .icon-body{
   color: rgb(206, 204, 203);
   text-decoration: none;
+}
+
+/*----------Reception-------------*/
+.reception-heading{
+  color:rgb(206, 204, 203);
+  text-align: center;
+}
+/*--------Footer-----------------*/
+.footer-container{
+  background-color: #000000;
+}
+.footer-content p{
+  text-align: center;
+  color: rgb(206, 204, 203);
+}
+/*---------Responsive-------------*/
+@media (max-width: 768px) {
+  .moto-container {
+    flex-direction: column;
+    align-items: center; 
+  }
+  .moto-image1 {
+    width: 350px;
+  }
+  .moto-items {
+    text-align: center; 
+  }
+
+  .icon-box,.card {
+    margin-top: 20px;
+  }
+
 }
