--- a/characters/style.css
+++ b/characters/style.css
@@ -1,21 +1,44 @@
 body {
-  background-image: 
-     url('/Users/premjoshua/Desktop/WebAssignment/assignment-1-premjoshuatalluri/Images/Background.jpeg'),
-     url('../Story/images/bg-repeat.jpg');
+  background-image:
+    url('/Users/premjoshua/Desktop/WebAssignment/assignment-1-premjoshuatalluri/Images/Background.jpeg'),
+    url('../Story/images/bg-repeat.jpg');
   background-repeat: no-repeat, repeat-y;
   background-size: auto, 100% auto;
   margin: 0px;
   padding: 0px;
 }
+
 /*--Header--*/
 header {
   padding: 0;
   font-family: MedievalSharp;
 }
+
 .h-img1 {
   width: 200px;
 }
+
 .h-h1 {
   color: rgb(214, 159, 64);
   text-shadow: 2px 0px 1.2px rgba(47, 31, 31, 0.9);
+}
+
+/*--Character--*/
+.character-board {
+  background-image: url('images/top.jpeg'),
+    url('../Story/images/Screenshot\ 2023-10-24\ at\ 7.18.06\ PM.png');
+  background-repeat: no-repeat, repeat-y;
+  background-size: 100% auto, 100% auto;
+  margin: 0px 190px;
+  padding: 30px;
+}
+.characters-list {
+  padding-top: 90px;
+}
+/*--Character 1--*/
+.c1-img{
+  width: 200px;
+}
+.c1-video {
+  width: 200px;
 }
