--- a/characters/style.css
+++ b/characters/style.css
@@ -9,8 +9,7 @@ body {
 }
 
 /*--Header--*/
-header {
-  padding: 0;
+header ,.characters-list h1{
   font-family: MedievalSharp;
 }
 
@@ -24,6 +23,9 @@ header {
 }
 
 /*--Character--*/
+ol{
+  list-style: disc;
+}
 .character-board {
   background-image: url('images/top.jpeg'),
     url('../Story/images/Screenshot\ 2023-10-24\ at\ 7.18.06\ PM.png');
@@ -32,13 +34,45 @@ header {
   margin: 0px 190px;
   padding: 30px;
 }
-.characters-list {
+.characters-list{
   padding-top: 90px;
 }
-/*--Character 1--*/
+.characters-list h1{
+  color: rgb(214, 159, 64);
+}
+.characters-list p,li{
+  color: rgb(206, 204, 203);
+}
+.character-1-container {
+  margin-bottom: 50px;
+}
+/*--Character left group--*/
 .c1-img{
-  width: 200px;
+  width: 250px;
+  margin: 0px 90px 0px 30px;
 }
 .c1-video {
-  width: 200px;
+  width: 250px;
+}
+.col-6 {
+  padding: 5px;
+}
+.skill-1 {
+  text-align: left;
+}
+/*--Character right group--*/
+.c2-video {
+  width: 250px;
+  padding-right: 20px;
+}
+.c2-img {
+  width: 250px;
+  margin: 0px 30px 0px 90px;
+}
+.character-2-stats {
+  padding-left: 50px;
+  
+}
+.col-6-2 {
+  padding-bottom: 10px;
 }
